# iyes_multiplayer

./: .gitignore  Cargo.toml  README.md
examples/bevyaim/bevyaim_authsrv/: Cargo.toml
examples/bevyaim/bevyaim_client/: Cargo.toml
examples/bevyaim/bevyaim_hostsrv/: Cargo.toml
examples/clichat/clichat_authsrv/: Cargo.toml
examples/clichat/clichat_authsrv/src/: main.rs
examples/clichat/clichat_client/: Cargo.toml
examples/clichat/clichat_client/src/: main.rs
examples/clichat/clichat_hostsrv/: Cargo.toml
examples/clichat/clichat_proto/: Cargo.toml
examples/clichat/clichat_proto/src/: lib.rs
iyes_multiplayer_authsrv/: Cargo.toml
iyes_multiplayer_authsrv/src/: account.rs  client.rs  config.rs  host.rs  lib.rs  server.rs
iyes_multiplayer_client/: Cargo.toml
iyes_multiplayer_client/src/: auth.rs  client.rs  config.rs  lib.rs
iyes_multiplayer_hostsrv/: Cargo.toml
iyesmpcli/: Cargo.toml
iyesmpcli/src/: gen_cert.rs  main.rs
proto/clientauth/: Cargo.toml
proto/clientauth/src/: handoff.rs  handshake.rs  lib.rs
proto/clienthost/: Cargo.toml
proto/hostauth/: Cargo.toml
