[package]
name = "iyes_multiplayer_authsrv"
version = "0.1.0"
edition = "2021"

[dependencies]
rmp-serde = "1.1.1"
serde = "1.0.163"
thiserror = "1.0.40"
webpki = "0.22.0"

[dependencies.iyes_multiplayer_proto_hostauth]
path = "../proto/hostauth"
[dependencies.iyes_multiplayer_proto_clientauth]
path = "../proto/clientauth"

[dependencies.tracing]
version = "0.1.37"
features = ["async-await"]

[dependencies.rustls]
version = "0.20.8" # must be whatever quinn uses
default-features = false
features = []

[dependencies.quinn]
version = "0.9.3"
default-features = false
features = ["runtime-tokio", "tls-rustls"]

[dependencies.tokio]
version = "1.28.0"
default-features = false

[dependencies.rcgen]
version = "0.10.0"
default-features = false
features = []
