[package]
name = "iyesmpcli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.rcgen]
version = "0.10.0"
default-features = false
features = []

[dependencies.clap]
version = "4.2.7"
features = ["derive"]
