[package]
name = "clichat_authsrv"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.iyes_multiplayer_authsrv]
path = "../../../iyes_multiplayer_authsrv"

[dependencies.tokio]
version = "1.28.0"
features = ["full"]

[dependencies.tracing-subscriber]
version = "0.3.17"
features = ["env-filter"]

[dependencies.tracing]
version = "0.1.37"
features = ["async-await"]
