[package]
name = "clichat_client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.iyes_multiplayer_client]
path = "../../../iyes_multiplayer_client"
[dependencies.iyes_multiplayer_proto_clientauth]
path = "../../../proto/clientauth"
[dependencies.clichat_proto]
path = "../clichat_proto"

[dependencies.tokio]
version = "1.28.0"
features = ["full"]

[dependencies.tracing-subscriber]
version = "0.3.17"
features = ["env-filter"]

[dependencies.tracing]
version = "0.1.37"
features = ["async-await"]
