[package]
name = "clichat_proto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.iyes_multiplayer_proto_clientauth]
path = "../../../proto/clientauth"

[dependencies.serde]
version = "1.0.163"
features = ["derive"]
